--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -27,6 +27,12 @@ jobs:
       - uses: actions/setup-python@v4
         with:
           python-version: 3.11
+      - name: Install Rust dependencies
+        run: |
+          cd server
+          cargo fetch
+          cd ../client
+          cargo fetch
       - uses: dtolnay/rust-toolchain@stable
         with:
           targets: ${{ matrix.platform.target }}
