--- a/.github/workflows/docker-ghcr.yml
+++ b/.github/workflows/docker-ghcr.yml
@@ -42,7 +42,7 @@ jobs:
       with:
         context: .
         file: ./Dockerfile
-        platforms: linux/amd64, linux/arm64
+        platforms: linux/amd64
         push: true
         tags: |
           ghcr.io/lithromantic/serverstatus-rust:latest
